fix dashboard page